# ygh_code_hub

./: .gitignore  README.md
01_Makefile/: Makefile
02_CMakeLists/: CMakeLists.txt
02_CMakeLists/example/: CMakeLists.txt  README.md  main.cpp  utils.cpp  utils.h
02_CMakeLists/example/module_a/: a1.cpp  a1.h
02_CMakeLists/example/module_a/legacy/: old.cpp
02_CMakeLists/example/module_b/: b1.cpp  b1.h
02_CMakeLists/example/module_b/test/: test_b.cpp
03_ColorConsole/: CMakeLists.txt  colorConsole.h  format_utils.h
03_ColorConsole/example/: main.cpp
04_AutoRegister/: CMakeLists.txt  auto_register.h
04_AutoRegister/example/: example.cpp  example1.cpp  example2.cpp  main.cpp
05_log/: CMakeLists.txt  format_utils.h  logger_utils.h  spdlogger.h
05_log/example/: main.cc
